# ScreenCapture

./: .gitignore  CMakeLists.txt
src/: App.cpp  App.h  main.cpp
